@@ -1,19 +1,11 @@
 class BuildPost
   include Sidekiq::Worker
-  include Sidekiq::Benchmark::Worker
 
   sidekiq_options queue: :build_record
 
   def perform(post_data)
-    benchmark.build_post do
-      @post = build_post(post_data)
-    end
-
-    benchmark.enqueue_export do
-      enqueue_export(@post)
-    end
-
-    benchmark.finish
+    @post = build_post(post_data)
+    enqueue_export(@post)
   end
 
 
