@@ -1,6 +1,5 @@
 class LogstashExport
   include Sidekiq::Worker
-  include Sidekiq::Benchmark::Worker
 
   # The job will be unique for the number of seconds configured (default 30 minutes) or until the job has been completed.
   sidekiq_options queue: :logstash_export,
@@ -8,15 +7,8 @@ class LogstashExport
 
 
   def perform(post_id)
-    benchmark.load_post do
-      @post = load_post(post_id)
-    end
-
-    benchmark.export_post do
-      export_post(@post)
-    end
-
-    benchmark.finish
+    @post = load_post(post_id)
+    export_post(@post)
   end
 
   def load_post(post_id)
